# lyndon-arrays

./: .gitignore  CMakeLists.txt  LICENSE  README.md  generate_charts.py  test.py
src/: inverse-lyndon.hpp  main.cpp
